modify demo background

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>react-snowf</title>
 	<link rel="icon" href="./favicon.ico" type="image/x-icon"/>
 	<style>
-		body { margin:0; background-color:#eee; }
+		body { margin:0; background-color:#000; }
 	</style>
 </head>
 <body>
